SQuirreL SQL FX Change Log
==============================

Feature: About dialog

Feature: Splash screen at start up

Feature: Preferences are now written to SQuirreL's user folder instead of to system dependent places like the registry on MS Windows.

Feature: Log messages are now written to the file system and can be viewed
  either through the file menu or by clicking the messages button of the status bar.

Feature: Bookmarks and abbreviations. To open the bookmarks popup use the ctrl+j shortcut.

Bug fix: Adding a driver jar led to an exception if the former directory looked at didn't exist anymore.

Feature: Added a right click menu with a clear option to clear messages from it.

Bug fix: Fix for null pointers when clicking/releasing the mouse on an area that is not a result row.

Feature: Code completion, finishing a completion list with tab instead return will remove all succeeding chars up to the next whitespace.

Builds now include a doc/src.jar where the sources of the build are placed.

Upgraded RichTextFX to version 0.5.

Feature: Right mouse menu in SQL results: "Copy", "Copy with header" and "Copy as INSERT-VALUES statement"

Bug fix: SQL editors error highlighting was case sensitive.

Feature: Right mouse menu in SQL results: Copy as SQL-IN-Statement

Upgraded RichTextFX to version 0.4.4.
  Fixes problem where scrolling didn't work when Pos1/End-keys were used.

Bug fix: Once and again SQL results where not displayed

Bug fix: Alias properties --> Editing schema table didn't work.

Feature: SQL errors are now displayed as tool tips: If the mouse pointer is held over an error (word marked red) the tool tip is shown.

Feature: SQL history combo box and history search dialog.

Feature: SQL results can be edited when only one table was selected.

Bug fix: Cursor didn't blink inside the SQL editor although the editor was focused.

Bug fix: Run SQL didn't work on MS-Windows when the SQL editor contained mor than one statement
