@@ -10,3 +10,5 @@ bookmark.execute=Execute bookmark
 log.test.error=Test log error
 log.test.warning=Test log warning
 log.test.info=Test log info
+
+bookmark.edit=Edit bookmarks
