@@ -5,24 +5,24 @@
 <?import javafx.scene.control.*?>
 <?scenebuilder-preview-i18n-resource i18n.properties?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="382.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.squirrelsql.session.sql.bookmark.BookmarkEditView">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="429.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.squirrelsql.session.sql.bookmark.BookmarkEditView">
    <children>
       <TextField fx:id="txtKey" layoutX="163.0" layoutY="20.0" prefHeight="25.0" prefWidth="151.0" />
       <Label layoutX="14.0" layoutY="25.0" prefHeight="15.0" prefWidth="121.0" text="%bookmarkedit.key" />
       <Label layoutX="14.0" layoutY="64.0" text="%bookmarkedit.description" />
       <TextField fx:id="txtDescription" layoutX="163.0" layoutY="59.0" prefHeight="25.0" prefWidth="426.0" AnchorPane.leftAnchor="163.0" AnchorPane.rightAnchor="10.0" />
       <Label layoutX="15.0" layoutY="129.0" text="%bookmarkedit.sql" />
-      <TextArea fx:id="txtSQL" layoutX="14.0" layoutY="144.0" prefHeight="137.0" prefWidth="575.0" AnchorPane.bottomAnchor="101.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="144.0" />
+      <TextArea fx:id="txtSQL" layoutX="14.0" layoutY="144.0" prefHeight="137.0" prefWidth="575.0" AnchorPane.bottomAnchor="148.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="144.0" />
       <CheckBox fx:id="chkBookmark" layoutX="108.0" layoutY="98.0" mnemonicParsing="false" text="%bookmark.edit.useas.bookmark" />
       <Label layoutX="14.0" layoutY="100.0" text="%bookmark.edit.useas" />
       <CheckBox fx:id="chkAbbreviation" layoutX="240.0" layoutY="99.0" mnemonicParsing="false" text="%bookmark.edit.useas.abbreviation" />
-      <HBox layoutX="14.0" layoutY="289.0" spacing="20.0" AnchorPane.bottomAnchor="68.0">
+      <HBox layoutX="14.0" layoutY="289.0" spacing="20.0" AnchorPane.bottomAnchor="115.0">
          <children>
             <Button fx:id="btnNew" layoutX="14.0" layoutY="289.0" mnemonicParsing="false" text="%bookmarkedit.new" AnchorPane.bottomAnchor="5.0" />
             <Button fx:id="btnSave" layoutX="84.0" layoutY="289.0" mnemonicParsing="false" text="%bookmarkedit.save" AnchorPane.bottomAnchor="5.0" />
             <Button fx:id="btnDelete" layoutX="154.0" layoutY="289.0" mnemonicParsing="false" text="%bookmarkedit.delete" AnchorPane.bottomAnchor="5.0" />
          </children>
       </HBox>
-      <Label fx:id="lblNote" layoutX="14.0" layoutY="323.0" prefHeight="46.0" prefWidth="575.0" text="%bookmarkedit.note" AnchorPane.bottomAnchor="13.0" />
+      <Label fx:id="lblNote" layoutX="14.0" layoutY="323.0" prefHeight="82.0" prefWidth="575.0" text="%bookmarkedit.note" AnchorPane.bottomAnchor="24.0" />
    </children>
 </AnchorPane>
