@@ -1,6 +1,10 @@
 SQuirreL SQL FX Change Log
 ==============================
 
+Bug fix: Session menu: Fixed missresource for menu item.
+
+Bug fix: Bookmarkedit dialog: Explanation text was partly hidden.
+
 Feature: About dialog
 
 Feature: Splash screen at start up
